--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,31 +10,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "clsx": "^2.1.0",
+    "crypto-js": "^4.2.0",
+    "date-fns": "^3.3.1",
+    "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.3",
-    "socket.io-client": "^4.7.4",
-    "axios": "^1.6.7",
-    "lucide-react": "^0.344.0",
-    "date-fns": "^3.3.1",
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.22.3",
+    "socket.io-client": "^4.7.4",
     "tailwind-merge": "^2.2.1",
-    "zustand": "^4.5.2",
-    "clsx": "^2.1.0",
-    "crypto-js": "^4.2.0"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.18",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.5.3",
-    "vite": "^5.4.2",
-    "@types/crypto-js": "^4.2.2"
+    "vite": "^5.4.2"
   }
 }
