--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/forms": "^0.5.7",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
+    "@tailwindcss/forms": "^0.5.10",
+    "@types/node": "^22.15.21",
+    "axios": "^1.9.0",
+    "crypto-js": "^4.2.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.290.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.56.4",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.17.0",
     "socket.io-client": "^4.7.2",
