--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.3",
     "morgan": "^1.10.0",
@@ -21,6 +22,7 @@
     "winston": "^3.12.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.8.0",
     "nodemon": "^3.1.0"
   }
 }
