--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "zustand": "^4.4.4"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
