--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,3 +11,6 @@ NODE_ENV=development
 
 # File uploads
 UPLOAD_PATH=uploads
+
+# Frontend URL for CORS (set this to your deployed frontend domain)
+FRONTEND_URL=http://localhost:5173
