--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -4,7 +4,6 @@
     { "src": "src/index.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "src/index.js" },
-    { "src": "/", "dest": "src/index.js" }
+    { "src": "/(.*)", "dest": "src/index.js" }
   ]
 }
