--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "Chat app backend",
   "main": "src/index.js",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "build": "echo \"No build step\""
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
